fixed landing page spacing

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 .landing-vertical-margin {
-  margin-top: 7.5em;
+  margin-top: 12.5em;
 }
 
 .font-lora {
